[package]
name = "rs-x2jsonl"
version = "0.1.0"
edition = "2024"

description = "Converts the excel sheet to json lines."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-x2jsonl"
homepage = "https://github.com/takanoriyanagitani/rs-x2jsonl"
documentation = "https://docs.rs/rs-x2jsonl/latest"
keywords = ["excel", "sheet", "jsonl", "json", "ndjson"]
category = ["command-line-utilities"]

exclude = [
	"x2jsonl",
	"sample.xlsx",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[[bin]]
name = "x2jsonl"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]

[dependencies.chrono]
version = "0"
default-features = false
features = [
	"clock",
	"oldtime",
	"std",
]

[dependencies.calamine]
version = "0"
default-features = false
features = [
	"chrono",
]
